<resources>
    <string name="app_name">Lover</string>
    <string name="welcome3">欢迎进入Love的世界</string>
    <string name="but_welcome3">立即体验</string>
    <string name="username">请输入用户名</string>
    <string name="userpwd">请输入密码</string>
    <string name="userrepwd">请确认密码</string>
    <string name="but_log">登录</string>
    <string name="but_sign">注册</string>
    <string name="rmbpwd">记住密码</string>
    <string name="fogpwd">忘记密码</string>
    <string name="sign">注册</string>
    <string name="sign_we">Sign</string>
    <string name="sex">性别</string>
    <string name="nmber">关联号码</string>
    <string name="cancel">取消</string>
    <string name="make_sure">确定</string>
    <string name="mean">菜单</string>
    <string name="single_msg">个人资料</string>
    <string name="other_account">另一半账号</string>
    <string name="out_current_account">退出当前用户</string>
    <string name="merryday">爱侣 纪念日</string>
    <string name="memory_day">纪念日</string>
    <string name="merrytalk">爱侣 备忘录</string>
    <string name="merry_talk">备忘录</string>
    <string name="hearttalk">爱侣 心里话</string>
    <string name="heart_talk">心里话</string>
    <string name="heartlight">爱侣 心情灯</string>
    <string name="heart_light">心情灯</string>
    <string name="complete">完成</string>
    <string name="memory_content">请输入纪念日内容</string>
    <string name="change_data">点击修改日期</string>
    <string name="gregorian">公历</string>
    <string name="calendar">农历</string>
    <string name="yes_no">是否允许对方可见</string>
    <string name="happy">开心</string>
    <string name="wave">波动</string>
    <string name="sad">难过</string>
    <string name="pain">痛苦</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="dialog_error_title">错误</string>
    <string name="content_not_null">内容不能为空</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    <string name="success_register_success">注册成功</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_email_format">E-mail格式不正确,正确的E-mail格式为“xxx@xxx”</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="save_fail">保存失败</string>
</resources>
