<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ec8e8e"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/title1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/userpwd"
        android:password="true"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="Login"
            android:text="@string/but_log"
            android:textColor="#dc1503"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="Sign"
            android:text="@string/sign"
            android:textColor="#058e12"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rempwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:text="@string/rmbpwd"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fogpwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="ForGetPwd"
            android:text="@string/fogpwd"
            android:textColor="#110ca3"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
