<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e69898"
    android:orientation="vertical"
    tools:context="com.ty.lover.Activity.SignActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/sign_we"
        android:textColor="#d22525"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/user37"
            android:tint="#e2366a"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/username" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/password"
            android:tint="#e2366a"/>

        <EditText
            android:id="@+id/userpwd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/userpwd"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/password"
            android:tint="#e2366a"/>

        <EditText
            android:id="@+id/userrepwd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/userrepwd"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_input"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/envelope56"
            android:tint="#e2366a"/>

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:background="@null"
            android:ems="10"
            android:hint="@string/register_input_user_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/but_sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:onClick="sign"
        android:text="@string/but_sign"
        android:textColor="#e2366a"
        android:textSize="20sp" />
</LinearLayout>
