<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity.AddMrmoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBase"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="Back"
            android:src="@drawable/arrow_back"
            android:tint="#e40a0a" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:text="@string/memory_day"
            android:gravity="center"
            android:textColor="#e40a0a"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="Add"
            android:text="@string/complete"
            android:textColor="#e40a0a"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/memory_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/memory_day"
            android:textColor="#e40a0a"
            android:textSize="25sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/memory_day"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/memory_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Switch
                android:id="@+id/switchs"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                tools:targetApi="ice_cream_sandwich" />
        </LinearLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/switchs"
            android:layout_weight="1"
            android:background="@null"
            android:editable="false"
            android:hint="@string/change_data"
            android:onClick="ChangeData" />
    </LinearLayout>

</LinearLayout>
