<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBase"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="Back"
            android:src="@drawable/arrow_back"
            android:tint="#e40a0a" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/heart_talk"
            android:textColor="#e40a0a"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/heart_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="Add"
            android:text="@string/complete"
            android:textColor="#e40a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/heart_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Time"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <EditText
            android:id="@+id/heart_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yes_no"
            android:textSize="20sp"
            android:textColor="#e40a0a"/>
    </LinearLayout>
</LinearLayout>