<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ty.lover.MainActivity.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBase"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="Back"
            android:src="@drawable/arrow_back"
            android:tint="#e40a0a" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:text="@string/mean"
            android:textColor="#e40a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#C9C8AA"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/single_msg"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:onClick="SingleMsg"
            android:text="@string/single_msg"
            android:textColor="#04d12d"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FACDAE"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/user_24" />

        <TextView
            android:id="@+id/other_account"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:onClick="OtherAccount"
            android:text="@string/other_account"
            android:textColor="#32b3e2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FC9D9B"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/logout"
            android:tint="#d855f2"/>

        <TextView
            android:id="@+id/quite_current"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="QuiteCurrent"
            android:text="@string/out_current_account"
            android:textColor="#d855f2"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
